--- a/bower.json
+++ b/bower.json
@@ -29,8 +29,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.1",
-    "angular-mocks": "~1.2.3",
-    "angular-ui-router": "~0.2.0"
+    "angular": "~1.2.7",
+    "angular-animate": "~1.2.7",
+    "angular-mocks": "~1.2.7",
+    "angular-route": "~1.2.7"
   }
 }
