--- a/bower.json
+++ b/bower.json
@@ -29,9 +29,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.7",
-    "angular-animate": "~1.2.7",
-    "angular-mocks": "~1.2.7",
-    "angular-route": "~1.2.7"
+    "angular": "1.2.13",
+    "angular-animate": "1.2.13",
+    "angular-mocks": "1.2.13",
+    "angular-route": "1.2.13"
   }
 }
