--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-requirejs": "~0.2.0",
     "karma-phantomjs-launcher": "~0.1.1",
     "karma": "~0.10.6",
-    "grunt-karma": "~0.6.2"
+    "grunt-karma": "~0.6.2",
+    "karma-coverage": "^0.2.1"
   }
 }
