--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "karma-phantomjs-launcher": "~0.1.1",
     "karma": "~0.10.6",
     "grunt-karma": "~0.6.2",
-    "karma-coverage": "^0.2.1"
+    "karma-coverage": "^0.2.1",
+    "karma-coveralls": "^0.1.4"
   }
 }
